Fri Jun 13 16:31:33 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * 14a_README:

          Fixed a typo.

        * bin/DCPS/CPPTemplate.pm:

          Added a "using" statement which may help the Borland compiler.

        * examples/DCPS/IntroductionToOpenDDS/StockQuoterCommon_Export.h:

          Re-generated using the latest generate_export_file.pl script.

        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * performance-tests/DCPS/InfoRepo_population/SyncServer.cpp:
        * performance-tests/DCPS/InfoRepo_population/publisher.cpp:
        * performance-tests/DCPS/InfoRepo_population/subscriber.cpp:
        * performance-tests/DCPS/Sync/SyncClient_i.cpp:
        * performance-tests/DCPS/Sync/SyncServer.cpp:
        * performance-tests/DCPS/Sync/SyncServer_i.cpp:

          Throw specs for the method definition need to use fully-qualified
          class names for exception classes nested within the method's class.

Thu Jun 12 22:35:11 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/Lifespan/Writer.cpp (write):

          Added a write() call after the bogus write_w_timestamp() calls
          to make sure valid data is demarshalled correctly after expired
          data is rejected.

        * tests/DCPS/Lifespan/subscriber.cpp (main):

          Verify that exactly one sample was received.  The first five
          with timestamps in the past should not have been read.

Thu Jun 12 22:13:29 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/PersistentDurability/publisher.cpp:
        * tests/DCPS/PersistentDurability/run_test.pl:
        * tests/DCPS/PersistentDurability/Writer.cpp:
        * tests/DCPS/PersistentDurability/Writer.h:

          Applied fixes from transient durability test.

        * tests/DCPS/TransientDurability/run_test.pl:

          Corrected method waiting for output into the file.

Thu Jun 12 22:06:42 UTC 2008  Ossama Othman  <othmano@ociweb.com>
