@@ -1,3 +1,15 @@
+Fri Jun 13 20:51:03 UTC 2008  Yan Dai  <dai_y@ociweb.com>
+
+        * tests/DCPS/ViewState/main.cpp:
+        
+          Fixed a timing issue in the test. The test case 2 should wait until
+          dispose and data sample(from write() after dispose) are both received
+          before verifying view state change in multiple generations. Current
+          test just wait for new sample which may be just dispose sample. Now
+          the dispose sample was read so the view state be NOT_NEW and sample 
+          state be READ before write() call and we can verify the new sample
+          changed the states.
+
 Fri Jun 13 16:31:33 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * 14a_README:
